--- a/markdown/markdown.html
+++ b/markdown/markdown.html
@@ -4,12 +4,11 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - Markdown Example</title>
+		<title>vue3 操作指南</title>
 
-		<link rel="stylesheet" href="/revealjs/js/reveal.css">
-		<link rel="stylesheet" href="/revealjs/css/theme/black.css" id="theme">
-
-        <link rel="stylesheet" href="/revealjs/js/plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="../revealjs/js/reveal.css">
+		<link rel="stylesheet" href="../revealjs/css/theme/black.css" id="theme">
+    <link rel="stylesheet" href="../revealjs/js/plugin/highlight/monokai.css">
 	</head>
 
 	<body>
@@ -24,10 +23,10 @@
             </div>
 		</div>
 
-		<script src="/revealjs/js/reveal.js"></script>
-    <script src="/revealjs/js/plugin/markdown/markdown.js"></script>
-    <script src="/revealjs/js/plugin/highlight/highlight.js"></script>
-    <script src="/revealjs/js/plugin/notes/notes.js"></script>
+		<script src="../revealjs/js/reveal.js"></script>
+    <script src="../revealjs/js/plugin/markdown/markdown.js"></script>
+    <script src="../revealjs/js/plugin/highlight/highlight.js"></script>
+    <script src="../revealjs/js/plugin/notes/notes.js"></script>
 
 		<script>
 			Reveal.initialize({
